	compiled separately from C source files. Useful in conjunction with the
	'cxx-options' flag to pass different compiler options to C and C++
	source files. (#3700)
	* Use [lfxtb] letters to differentiate component kind instead of
	opaque "c" in dist-dir layout.
	* 'cabal configure' now supports '--enable-static', which can be
	used to build static libaries with GHC via GHC's `-staticlib`
	flag.
	* Added support for '--enable-tests' and '--enable-benchmarks' to
	'cabal fetch' (#4948).
	* Misspelled package-names on CLI will no longer be silently
	case-corrected (#4778).
	* 'cabal new-configure' now backs up the old 'cabal.project.local'
	file if it exists (#4460).
	* On macOS, `new-build` will now place dynamic libraries into
	`store/lib` and aggressively shorten their names in an effort to
	stay within the load command size limits of macOSs mach-o linker.
	* 'new-build' now checks for the existence of executables for
	build-tools and build-tool-depends dependencies in the solver
	(#4884).
	* Fixed a spurious warning telling the user to run 'cabal update'
	when it wasn't necessary (#4444).
	* Packages installed in sandboxes via 'add-source' now have
	their timestamps updated correctly and so will not be reinstalled
	unncecessarily if the main install command fails (#1375).
	* Add Windows device path support for copyFile, renameFile. Allows cabal
	new-build to use temporary store path of up to 32k length
	(#3972, #4914, #4515).
	* When a flag value is specified multiple times on the command
	line, the last one is now preferred, so e.g. '-f+dev -f-dev' is
	now equivalent to '-f-dev' (#4452).
	* Removed support for building cabal-install with GHC < 7.10 (#4870).
	* New 'all-packages' section in 'cabal.project' files that applies
	options to all packages, not just those local to the project.

2.0.0.1 Mikhail Glushenkov <mikhail.glushenkov@gmail.com> December 2017
	* Support for GHC's numeric -g debug levels (#4673).